<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/row"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/notification1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/borders">

        <ImageView
            android:id="@+id/red"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/email"
            android:layout_margin="15dp"
            android:contentDescription="@string/todo"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_from_company"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_toEndOf="@id/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/take"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_a_half_day_off"
            android:layout_toEndOf="@id/red"
            android:layout_below="@id/company"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="40dp"/>

        <TextView
            android:id="@+id/textViewOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:textColor="#9E0009"
            android:textStyle="bold"
            android:text="@string/_8942"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_alignParentEnd="true"
            android:padding="5dp"/>



    </RelativeLayout>
</androidx.cardview.widget.CardView>

